New group id (io.github.gpc)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,14 @@
 version=3.0.0.BUILD-SNAPSHOT
-#projectVersion=2.2.7https://github.com/grails-fields-plugin/grails-fields/blob/master/gradle.properties
 grailsVersion=4.1.2
 scaffoldingVersion=2.0.0.RC1
 cglibNodepVersion=3.2.9
 joddWotVersion=3.3.8
 servletApiVersion=4.0.1
 asciidoc=true
-githubSlug=grails-fields-plugin/grails-fields
+githubSlug=gpc/fields
 githubBranch=master
 title=Grails Fields Plugin
 projectDesc=Customizable form-field rendering based on overrideable GSP template
 guide=../../guide
-projectUrl=https://github.com/fields/grails-fields
+projectUrl=https://github.com/gpc/fields
 developers=Robert Fletcher, Graeme Rocher, Søren Berg Glasius
