--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,7 @@ plugins {
     id 'org.asciidoctor.jvm.convert' version '3.2.0'
 }
 
-version project.projectVersion
-
-group 'org.grails.plugins'
+group 'io.github.gpc'
 
 apply plugin: 'org.grails.grails-plugin'
 apply plugin: 'org.grails.grails-gsp'
@@ -111,15 +109,35 @@ publishing {
 
 ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
+
+afterEvaluate {
+    signing {
+        if (System.getenv('SIGN_ARMORED_KEY')) {
+            String signingKey = System.getenv('SIGN_ARMORED_KEY')
+            String signingPassword = System.getenv('SIGN_PASSWORD')
+            useInMemoryPgpKeys(signingKey, signingPassword)
+        } else {
+            ext["signing.keyId"] = System.getenv('SIGNING_KEY_ID')
+            ext["signing.password"] = System.getenv('SIGNING_PASSPHRASE')
+            ext["signing.secretKeyRingFile"] = System.getenv('SECRING_FILE')
+        }
+        required {
+            isReleaseVersion
+        }
+
+        sign publishing.publications.maven
+    }
+}
+
+tasks.withType(Sign).configureEach {
+    onlyIf { isReleaseVersion }
+}
+
 import io.github.gradlenexus.publishplugin.InitializeNexusStagingRepository
 
 tasks.withType(InitializeNexusStagingRepository).configureEach {
-	onlyIf { isReleaseVersion }
-	shouldRunAfter(tasks.withType(Sign))
-}
-
-tasks.withType(Sign) {
     onlyIf { isReleaseVersion }
+    shouldRunAfter(tasks.withType(Sign))
 }
 
 nexusPublishing {
