--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=3.0.0.BUILD-SNAPSHOT
-grailsVersion=4.1.2
+version=4.0.0.BUILD-SNAPSHOT
+grailsVersion=4.1.3
 scaffoldingVersion=2.0.0.RC1
 cglibNodepVersion=3.2.9
 joddWotVersion=3.3.8
@@ -11,4 +11,4 @@ title=Grails Fields Plugin
 projectDesc=Customizable form-field rendering based on overrideable GSP template
 guide=../../guide
 projectUrl=https://github.com/gpc/fields
-developers=Robert Fletcher, Graeme Rocher, Søren Berg Glasius
+developers=Robert Fletcher, Graeme Rocher, Søren Berg Glasius and more
