--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,17 +26,17 @@ jobs:
                     SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
                     SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
                     SONATYPE_STAGING_PROFILE_ID: ${{ secrets.SONATYPE_STAGING_PROFILE_ID }}
+                    SECRING_FILE: ${{ secrets.SECRING_FILE }}
                     SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
                     SIGNING_PASSPHRASE: ${{ secrets.SIGNING_PASSPHRASE }}
-                    SECRING_FILE: ${{ secrets.SECRING_FILE }}
+                    SIGNING_FILE: ${{ github.workspace }}/secring.pgp                    
                     RELEASE_VERSION: ${{ steps.get_version.outputs.version-without-v }}
                 run: |
-                    echo "${SECRING_FILE}" | base64 -d > "${GITHUB_WORKSPACE}/secring.gpg"
-                    cat "${GITHUB_WORKSPACE}/secring.gpg" | head 
+                    echo "${SECRING_FILE}" | base64 -d > "${SIGNING_FILE}"
                     echo "Publishing Artifacts for $RELEASE_VERSION"
-                    (set -x; ./gradlew -Pversion="${RELEASE_VERSION}" -Psigning.secretKeyRingFile="${GITHUB_WORKSPACE}/secring.gpg" publishToSonatype closeAndReleaseSonatypeStagingRepository --no-daemon)
-                    rm  "${GITHUB_WORKSPACE}/secring.gpg"
-            -   name: Bump patch version by one
+                    (set -x; ./gradlew -Pversion="${RELEASE_VERSION}" publishToSonatype closeAndReleaseSonatypeStagingRepository --no-daemon)
+                    rm  "${SIGNING_FILE}"
+            -   name: Bump patch version by one for next SNAPSHOT
                 uses: dhkatz/get-version-action@v3.0.0
                 id: patch_version
                 with:
