--- a/build.gradle
+++ b/build.gradle
@@ -126,12 +126,14 @@ afterEvaluate {
         } else {
             ext["signing.keyId"] = System.getenv('SIGNING_KEY_ID')
             ext["signing.password"] = System.getenv('SIGNING_PASSPHRASE')
-            ext["signing.secretKeyRingFile"] = System.getenv('SECRING_FILE')
+            ext["signing.secretKeyRingFile"] = System.getenv('SIGNING_FILE')
         }
         required {
             isReleaseVersion
         }
-
+        println "-"*50
+        println ext.dump()
+        println "-" * 50
         sign publishing.publications.maven
     }
 }
