--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,11 @@ publishing {
 
 ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
+if(System.getenv('SIGNING_KEY_ID')) {
+    ext["signing.keyId"] = System.getenv('SIGNING_KEY_ID')
+    ext["signing.password"] = System.getenv('SIGNING_PASSPHRASE')
+    ext["signing.secretKeyRingFile"] = System.getenv('SIGNING_FILE')
+}
 
 afterEvaluate {
     signing {
@@ -123,23 +128,22 @@ afterEvaluate {
             String signingKey = System.getenv('SIGN_ARMORED_KEY')
             String signingPassword = System.getenv('SIGN_PASSWORD')
             useInMemoryPgpKeys(signingKey, signingPassword)
-        } else {
-            ext["signing.keyId"] = System.getenv('SIGNING_KEY_ID')
-            ext["signing.password"] = System.getenv('SIGNING_PASSPHRASE')
-            ext["signing.secretKeyRingFile"] = System.getenv('SIGNING_FILE')
-        }
+        } 
         required {
             isReleaseVersion
         }
-        println "-"*50
-        println ext.dump()
-        println "-" * 50
+
         sign publishing.publications.maven
     }
 }
 
 tasks.withType(Sign).configureEach {
     onlyIf { isReleaseVersion }
+    doFirst {
+        println "-" * 50
+        println ext.dump()
+        println "-" * 50
+    }
 }
 
 import io.github.gradlenexus.publishplugin.InitializeNexusStagingRepository
