Fixing bump-version branch in actions-js/push

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,7 @@ jobs:
                     github_token: ${{ secrets.GITHUB_TOKEN }}
                     author_name: ${{ secrets.GIT_USER_NAME }}
                     author_email: $${ secrets.GIT_USER_EMAIL }}
+                    branch: 'master'
                     message: 'Set project version to next SNAPSHOT'
     documenation:
         runs-on: ubuntu-latest
