--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,15 +52,16 @@ jobs:
                 with:
                     java-version: 8
                     distribution: temurin
-            -   uses: boxt/github-tag-action@2.11.0
-                id: patch_version
-                env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                    DEFAULT_BUMP: patch
-                    DRY_RUN: true
+            -   uses: actions-ecosystem/action-get-latest-tag@v1
+                id: get-latest-tag
+            -   uses: actions-ecosystem/action-bump-semver@v1
+                id: bump-semver
+                with:
+                    current_version: ${{ steps.get-latest-tag.outputs.tag }}
+                    level: patch
             -   name: Set version in gradle.properties
                 env:
-                    NEXT_VERSION: ${{ steps.patch_version.outputs.tag }}
+                    NEXT_VERSION: ${{ steps.bump-semver.outputs.new_version }}
                 run: |
                     echo "Preparing next snapshot as ${NEXT_VERSION}"
                     ./gradlew snapshotVersion -Pversion="${NEXT_VERSION}"
