--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -2,11 +2,11 @@ name: Deploy docs to Pages
 
 on:
     # Runs on pushes targeting the default branch
-    push:
-        branches: [ master ]
+    #push:
+    #    branches: [ master ]
     
     # Allows you to run this workflow manually from the Actions tab
-    workflow_dispatch:
+    #workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
