--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -8,6 +8,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v4
+                with:
+                    fetch-depth: 0
             -   uses: battila7/get-version-action@v2
                 id: get_version
             -   run: echo ${{ steps.get_version.outputs.version }}
