--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,29 @@ on:
 permissions:
     contents: write
 jobs:
-    release:
+    get-version:
+        name: Get version
         runs-on: ubuntu-latest
+        env:
+            GIT_USER_NAME: ${{ vars.GIT_USER_NAME }}
+            GIT_USER_EMAIL: ${{ vars.GIT_USER_EMAIL }}
+        outputs:
+            version: ${{ steps.get_version.outputs.version-without-v }}
+            next-patch-version: ${{ steps.version.outputs.inc-patch }}
+        steps:
+            -   uses: actions/checkout@v4
+                with:
+                    token: ${{ secrets.GITHUB_TOKEN }}
+            -   uses: dhkatz/get-version-action@v3.0.0
+                id: get_version
+            -   uses: madhead/semver-utils@latest
+                id: version
+                with:
+                    version: ${{ steps.get_version.outputs.version-without-v }}
+    release:
+        name: Release to SONATYPE
+        runs-on: ubuntu-latest
+        needs: get-version
         env:
             GIT_USER_NAME: ${{ vars.GIT_USER_NAME }}
             GIT_USER_EMAIL: ${{ vars.GIT_USER_EMAIL }}
@@ -18,8 +39,6 @@ jobs:
                 with:
                     java-version: 8
                     distribution: temurin
-            -   uses: dhkatz/get-version-action@v3.0.0
-                id: get_version
             -   uses: micronaut-projects/github-actions/pre-release@master
                 with:
                     token: ${{ secrets.GITHUB_TOKEN }}
@@ -32,13 +51,13 @@ jobs:
                     SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
                     SIGNING_PASSPHRASE: ${{ secrets.SIGNING_PASSPHRASE }}
                     SIGNING_FILE: ${{ github.workspace }}/secring.pgp
-                    RELEASE_VERSION: ${{ steps.get_version.outputs.version-without-v }}
+                    RELEASE_VERSION: ${{ needs.get-version.outputs.version }}
                 run: |
                     echo "${SECRING_FILE}" | base64 -d > "${SIGNING_FILE}"
                     echo "Publishing Artifacts for $RELEASE_VERSION"
                     (set -x; ./gradlew -Pversion="${RELEASE_VERSION}" publishToSonatype closeAndReleaseSonatypeStagingRepository --no-daemon)
                     rm  "${SIGNING_FILE}"
-    bump-version:
+    bump-snapshot-version:
         runs-on: ubuntu-latest
         needs: release
         env:
@@ -52,15 +71,9 @@ jobs:
                 with:
                     java-version: 8
                     distribution: temurin
-            -   name: Bump version and push tag
-                id: tag_version
-                uses: mathieudutour/github-tag-action@v6.1
-                with:
-                    github_token: ${{ secrets.GITHUB_TOKEN }}
-                    dry_run: true
             -   name: Set version in gradle.properties
                 env:
-                    NEXT_VERSION: ${{ steps.tag_version.outputs.new_version }}
+                    NEXT_VERSION: ${{ needs.get-version.outputs.next-patch-version }}
                 run: |
                     echo "Preparing next snapshot as ${NEXT_VERSION}"
                     ./gradlew snapshotVersion -Pversion="${NEXT_VERSION}"
@@ -70,10 +83,10 @@ jobs:
                     author_name: ${{ vars.GIT_USER_NAME }}
                     author_email: $${ vars.GIT_USER_EMAIL }}
                     branch: master
-                    message: 'Set project version to next SNAPSHOT'
+                    message: 'Set project version to ${{ needs.release.outputs.next-patch-version }}-SNAPSHOT'
     documenation:
         runs-on: ubuntu-latest
-        needs: bump-version
+        needs: release
         env:
             GIT_USER_NAME: ${{ vars.GIT_USER_NAME }}
             GIT_USER_EMAIL: ${{ vars.GIT_USER_EMAIL }}
@@ -85,13 +98,11 @@ jobs:
                 with:
                     java-version: 8
                     distribution: temurin
-            -   uses: dhkatz/get-version-action@v3.0.0
-                id: get_version
             -   uses: micronaut-projects/github-actions/export-gradle-properties@master
                 id: asciidoctor
             -   uses: gradle/gradle-build-action@v2
                 env:
-                    RELEASE_VERSION: ${{ steps.get_version.outputs.version-without-v }}
+                    RELEASE_VERSION: ${{ needs.get-version.outputs.version }}
                 with:
                     arguments: -Pversion="${RELEASE_VERSION}" asciidoctor
             -   uses: micronaut-projects/github-pages-deploy-action@master
@@ -105,7 +116,7 @@ jobs:
                     DOC_FOLDER: latest
                     COMMIT_EMAIL: ${{ vars.GIT_USER_EMAIL }}
                     COMMIT_NAME: ${{ vars.GIT_USER_NAME }}
-                    VERSION: ${{ steps.get_version.outputs.version-without-v }}
+                    VERSION: ${{ needs.release.outputs.version }}
             -   uses: micronaut-projects/github-actions/post-release@master
                 if: success()
                 with:
