--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
                     rm  "${SIGNING_FILE}"
     bump-snapshot-version:
         runs-on: ubuntu-latest
-        needs: release
+        needs: [get-version, release]
         env:
             GIT_USER_NAME: ${{ vars.GIT_USER_NAME }}
             GIT_USER_EMAIL: ${{ vars.GIT_USER_EMAIL }}
@@ -86,7 +86,7 @@ jobs:
                     message: 'Set project version to ${{ needs.release.outputs.next-patch-version }}-SNAPSHOT'
     documenation:
         runs-on: ubuntu-latest
-        needs: release
+        needs: [ get-version, release ]
         env:
             GIT_USER_NAME: ${{ vars.GIT_USER_NAME }}
             GIT_USER_EMAIL: ${{ vars.GIT_USER_EMAIL }}
