--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,10 +59,11 @@ jobs:
                     rm  "${SIGNING_FILE}"
     bump-snapshot-version:
         runs-on: ubuntu-latest
-        needs: [get-version, release]
+        needs: [ get-version, release ]
         env:
             GIT_USER_NAME: ${{ vars.GIT_USER_NAME }}
             GIT_USER_EMAIL: ${{ vars.GIT_USER_EMAIL }}
+            NEXT_VERSION: ${{ needs.get-version.outputs.next-patch-version }}
         steps:
             -   uses: actions/checkout@v4
                 with:
@@ -72,8 +73,6 @@ jobs:
                     java-version: 8
                     distribution: temurin
             -   name: Set version in gradle.properties
-                env:
-                    NEXT_VERSION: ${{ needs.get-version.outputs.next-patch-version }}
                 run: |
                     echo "Preparing next snapshot as ${NEXT_VERSION}"
                     ./gradlew snapshotVersion -Pversion="${NEXT_VERSION}"
@@ -83,13 +82,14 @@ jobs:
                     author_name: ${{ vars.GIT_USER_NAME }}
                     author_email: $${ vars.GIT_USER_EMAIL }}
                     branch: master
-                    message: 'Set project version to ${{ needs.release.outputs.next-patch-version }}-SNAPSHOT'
+                    message: Set project version to ${NEXT_VERSION}-SNAPSHOT
     documenation:
         runs-on: ubuntu-latest
         needs: [ get-version, release ]
         env:
             GIT_USER_NAME: ${{ vars.GIT_USER_NAME }}
             GIT_USER_EMAIL: ${{ vars.GIT_USER_EMAIL }}
+            RELEASE_VERSION: ${{ needs.get-version.outputs.version }}
         steps:
             -   uses: actions/checkout@v4
                 with:
@@ -101,14 +101,11 @@ jobs:
             -   uses: micronaut-projects/github-actions/export-gradle-properties@master
                 id: asciidoctor
             -   uses: gradle/gradle-build-action@v2
-                env:
-                    RELEASE_VERSION: ${{ needs.get-version.outputs.version }}
                 with:
                     arguments: -Pversion="${RELEASE_VERSION}" asciidoctor
             -   uses: micronaut-projects/github-pages-deploy-action@master
                 if: success()
                 env:
-                    BETA: ${{ steps.get_version.outputs.isPrerelase }}
                     TARGET_REPOSITORY: ${{ github.repository }}
                     GH_TOKEN: ${{ secrets.GH_TOKEN }}
                     BRANCH: gh-pages
@@ -116,7 +113,7 @@ jobs:
                     DOC_FOLDER: latest
                     COMMIT_EMAIL: ${{ vars.GIT_USER_EMAIL }}
                     COMMIT_NAME: ${{ vars.GIT_USER_NAME }}
-                    VERSION: ${{ needs.release.outputs.version }}
+                    VERSION: ${RELEASE_VERSION}
             -   uses: micronaut-projects/github-actions/post-release@master
                 if: success()
                 with:
