Ready for release with Grails 5.3.5

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,8 @@
 #Tue, 02 Jan 2024 08:12:44 +0000
 version=4.0.1-SNAPSHOT
-grailsVersion=4.1.3
-scaffoldingVersion=2.0.0.RC1
-cglibNodepVersion=3.2.9
+grailsVersion=5.3.5
+grailsGradlePluginVersion=5.3.1
 joddWotVersion=3.3.8
-servletApiVersion=4.0.1
 asciidoc=true
 githubSlug=gpc/fields
 githubBranch=master
