--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     repositories {
         mavenLocal()
-        mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsVersion"
+        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
         classpath 'io.github.groovylang.groovydoc:groovydoc-gradle-plugin:1.0.1'
         classpath "io.github.gradle-nexus:publish-plugin:1.1.0"
     }
@@ -33,26 +33,23 @@ repositories {
 }
 
 dependencies {
-    provided 'org.springframework.boot:spring-boot-starter-logging'
-    provided "org.springframework.boot:spring-boot-starter-actuator"
-    provided "org.springframework.boot:spring-boot-autoconfigure"
-    provided "org.springframework.boot:spring-boot-starter-tomcat"
+    compileOnly 'org.springframework.boot:spring-boot-starter-logging'
+    compileOnly "org.springframework.boot:spring-boot-starter-actuator"
+    compileOnly "org.springframework.boot:spring-boot-autoconfigure"
+    compileOnly "org.springframework.boot:spring-boot-starter-tomcat"
 
-    provided "org.grails:grails-web-boot"
-	provided "org.grails:grails-dependencies"
-	provided "javax.servlet:javax.servlet-api:$servletApiVersion"
+    compileOnly "org.grails:grails-web-boot"
+	compileOnly "org.grails:grails-dependencies"
 
-    compile "org.grails:scaffolding-core"
+    implementation "org.grails:scaffolding-core"
 
-    testCompile "org.grails:grails-web-testing-support"
-    testCompile "org.grails:grails-gorm-testing-support"
+    testImplementation "org.grails:grails-web-testing-support"
+    testImplementation "org.grails:grails-gorm-testing-support"
 
-    console "org.grails:grails-console"
-
-    testCompile 'org.javassist:javassist:3.29.0-GA'
-    testCompile "org.codehaus.groovy:groovy-dateutil"
-    testCompile "cglib:cglib-nodep:2.2.2"
-    testCompile("org.jodd:jodd-wot:$joddWotVersion") {
+    testImplementation 'org.javassist:javassist:3.29.0-GA'
+    testImplementation "org.codehaus.groovy:groovy-dateutil"
+    testImplementation "cglib:cglib-nodep:2.2.2"
+    testImplementation("org.jodd:jodd-wot:$joddWotVersion") {
         exclude module: 'slf4j-api'
         exclude module: 'asm'
     }
@@ -62,6 +59,10 @@ tasks.withType(GroovyCompile) {
     configure(groovyOptions) {
         forkOptions.jvmArgs = ['-Xmx1024m']
     }
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
 }
 
 publishing {
@@ -182,14 +183,14 @@ asciidoctor {
     outputDir = "${buildDir}/asciidoc"
 }
 
-task apiDocs(type: Copy) {
+tasks.register('apiDocs', Copy) {
     from groovydoc.outputs.files
     into file("${buildDir}/asciidoc/api")
 }
 
 asciidoctor.dependsOn(apiDocs)
 
-task snapshotVersion {
+tasks.register('snapshotVersion') {
     doLast {
         if (isReleaseVersion) {
             ant.propertyfile(file: "gradle.properties") {
