--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@
 version=4.0.1-SNAPSHOT
 grailsVersion=5.3.5
 grailsGradlePluginVersion=5.3.1
+grailsScaffoldingVersion=2.1.0
 joddWotVersion=3.3.8
 asciidoc=true
 githubSlug=gpc/fields
