--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 #Mon, 08 Apr 2024 19:48:24 +0000
-version=5.1.0-SNAPSHOT
-grailsVersion=5.3.5
-grailsGradlePluginVersion=5.3.1
+version=6.0.0-SNAPSHOT
+grailsVersion=7.0.0-SNAPSHOT
+grailsGradlePluginVersion=7.0.0-SNAPSHOT
 grailsScaffoldingVersion=2.1.0
+groovyVersion=4.0.23
 joddWotVersion=3.3.8
 asciidoc=true
 githubSlug=gpc/fields
