Change gsp to compileOnly

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     compileOnly "org.springframework.boot:spring-boot-autoconfigure"
     compileOnly "org.springframework.boot:spring-boot-starter-tomcat"
     compileOnly "org.grails:grails-dependencies"
-    implementation "org.grails.plugins:gsp:${grailsVersion}"
+    compileOnly "org.grails.plugins:gsp:${grailsVersion}"
     implementation "org.grails:scaffolding-core:$grailsScaffoldingVersion"
 
     testImplementation "org.grails:grails-web-testing-support"
