--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ grailsGradlePluginVersion=7.0.0-SNAPSHOT
 grailsScaffoldingVersion=2.1.0
 groovyVersion=4.0.23
 joddWotVersion=3.3.8
+byteBuddyVersion=1.14.12
 asciidoc=true
 githubSlug=gpc/fields
 githubBranch=master
