Use Groovy version from Gradle for build

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,15 @@ buildscript {
         classpath 'io.github.groovylang.groovydoc:groovydoc-gradle-plugin:1.0.1'
         classpath "io.github.gradle-nexus:publish-plugin:1.1.0"
     }
+
+    configurations.configureEach {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            if ((details.requested.group == 'org.codehaus.groovy' || details.requested.group == 'org.apache.groovy') && details.requested.name != 'groovy-bom') {
+                details.useTarget(group: 'org.codehaus.groovy', name: details.requested.name, version: "$GroovySystem.version")
+                details.because "Use version of Groovy provided by Gradle"
+            }
+        }
+    }
 }
 plugins {
     id 'org.asciidoctor.jvm.convert' version '3.3.2'
