--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ grailsPublish {
     license {
         name = 'Apache-2.0'
     }
-    title = "Grails Scaffolding Plugin"
+    title = "Grails Fields Plugin"
     desc = "Fields integration for Grails"
     developers = [robfletcher: 'Rob Fletcher', graemerocher: "Graeme Rocher", sdelamo: "Sergio del Amo", sbglasius: 'Søren Berg Glasius']
 }
