exclude org.codehaus.groovy set java 17 using toolchain

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ buildscript {
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
-        classpath 'io.github.groovylang.groovydoc:groovydoc-gradle-plugin:1.0.1'
+        classpath 'io.github.groovylang.groovydoc:groovydoc-gradle-plugin:1.0.1', {
+            exclude group: 'org.codehaus.groovy'
+        }
     }
 }
 plugins {
@@ -20,8 +22,11 @@ apply plugin: 'org.grails.grails-gsp'
 apply plugin: "org.grails.grails-doc"
 apply plugin: "org.grails.internal.grails-plugin-publish"
 
-sourceCompatibility = 1.17
-targetCompatibility = 1.17
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 repositories {
     mavenCentral()
