--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 version=6.0.0-SNAPSHOT
 grailsVersion=7.0.0-SNAPSHOT
 grailsGradlePluginVersion=7.0.0-SNAPSHOT
-grailsScaffoldingVersion=2.1.0
 groovyVersion=4.0.23
 joddWotVersion=3.3.8
 byteBuddyVersion=1.14.12
 asciidoc=true
 githubSlug=gpc/fields
 githubBranch=master
+gormHibernate5Version=9.0.0-SNAPSHOT
 title=Grails Fields Plugin
 projectDesc=Customizable form-field rendering based on overrideable GSP template
 guide=../../guide
