fix compilation errors

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ grailsVersion=7.0.0-SNAPSHOT
 grailsGradlePluginVersion=7.0.0-SNAPSHOT
 grailsScaffoldingVersion=2.1.0
 groovyVersion=4.0.23
+gormHibernate5Version=9.0.0-SNAPSHOT
 joddWotVersion=3.3.8
 byteBuddyVersion=1.14.12
 asciidoc=true
