--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,6 @@ dependencies {
     compileOnly "org.springframework.boot:spring-boot-starter-tomcat"
     compileOnly "org.grails:grails-dependencies"
     compileOnly "org.grails.plugins:gsp:${grailsVersion}"
-    implementation "org.grails:scaffolding-core:$grailsScaffoldingVersion"
 
     testImplementation "org.grails:grails-web-testing-support"
     testImplementation "org.grails:grails-gorm-testing-support"
@@ -45,6 +44,8 @@ dependencies {
     }
 
     testRuntimeOnly "net.bytebuddy:byte-buddy:$byteBuddyVersion"
+
+    testImplementation "org.grails:grails-datastore-gorm-hibernate5:$gormHibernate5Version"
 }
 
 tasks.withType(Test).configureEach {
