change version to projectVersion for use during release

--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ asciidoctor {
             'compat-mode': 'true',
             'toc': 'left',
             'icons': 'font',
-            'version': project.version,
+            'version': project.projectVersion,
             'sourcedir': 'src/main/groovy'
     baseDirFollowsSourceDir()
     outputDir = "${buildDir}/asciidoc"
