--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #Mon, 08 Apr 2024 19:48:24 +0000
-version=5.1.0-SNAPSHOT
+projectVersion=5.1.0-SNAPSHOT
 grailsVersion=5.3.5
 grailsGradlePluginVersion=5.3.1
 grailsScaffoldingVersion=2.1.0
