--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
     id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
 
+version project.projectVersion
 group 'org.grails.plugins'
 
 apply plugin: 'org.grails.grails-plugin'
