get rid of commons-lang

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     compileOnly "org.springframework.boot:spring-boot-starter-actuator"
     compileOnly "org.springframework.boot:spring-boot-autoconfigure"
     compileOnly "org.springframework.boot:spring-boot-starter-tomcat"
-    compileOnly "org.grails:grails-dependencies"
+    compileOnly "org.grails:grails-plugin-controllers"
     compileOnly "org.grails.plugins:gsp:${grailsVersion}"
 
     testImplementation "org.grails:grails-web-testing-support"
