--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #Mon, 08 Apr 2024 19:48:24 +0000
-version=6.0.0-SNAPSHOT
+projectVersion=6.0.0-SNAPSHOT
 grailsVersion=7.0.0-SNAPSHOT
 grailsGradlePluginVersion=7.0.0-SNAPSHOT
 grailsScaffoldingVersion=2.1.0
